# Event-Manager--OOP

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp
data/: event.txt
domain/: EventsValidator.cpp  EventsValidator.h  event.cpp  event.h
gui/: EventListWindow.cpp  EventListWindow.h  GUI.cpp  GUI.h
infrastructure/: CSVEventList.cpp  CSVEventList.h  EventList.cpp  EventList.h  FileEventList.cpp  FileEventList.h  HTMLEventList.cpp  HTMLEventList.h
models/: EventTableModel.cpp  EventTableModel.h
repository/: RepositoryExceptions.cpp  RepositoryExceptions.h  repository.cpp  repository.h
service/: service.cpp  service.h  undo_redo.h
